--- a/assets/style.css
+++ b/assets/style.css
@@ -70,4 +70,16 @@ input {
   height: 20px;
 }
 
-/*** Main ****/
+/*** Giphy ****/
+
+.giphy {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  margin: 3rem;
+  gap: 30px;
+}
+
+.giphy img {
+  width: 100%;
+  height: 100%;
+}
